fix chart gap

--- a/src/components/Exchange/ChartTokenSelector.scss
+++ b/src/components/Exchange/ChartTokenSelector.scss
@@ -36,7 +36,7 @@
 
 .chart-token-menu-items.menu-items {
   max-width: 45rem;
-  top: 7.5rem;
+  top: 6.8rem;
   right: unset;
   left: 0;
   cursor: auto;
@@ -103,7 +103,7 @@
 
 @media (max-width: 1100px) {
   .chart-token-menu-items.menu-items {
-    top: 5.7rem;
+    top: 5.05rem;
   }
 }
 
